--- a/index.html
+++ b/index.html
@@ -11,10 +11,17 @@
         integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
+    <!--META TAG DE OG-->
+    <meta property="og:tupe" content="website" />
+    <meta property="og:title" content="Dev Burger - O Melhor Hamburger Dev!" />
+
     <link rel="stylesheet" href="./styles/output.css" />
-    <link rel="icon" href="./assets/logoh.png" type="image/png">
+    <meta property="og:image" content="https://cardapio-chi-virid.vercel.app/assets/hamb-1.png" />
+    <meta property="og:description" content="O melhor Lanche da Região" />
+    <meta property="og:site_namw" content="Dev Burger" />
+
     <title>Cardápio</title>
-   
+
 
 </head>
 
