Adicionando Meta Tag correções

--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <!--META TAG DE OG-->
-    <meta property="og:tupe" content="website" />
+    <meta property="og:type" content="website" />
     <meta property="og:title" content="Dev Burger - O Melhor Hamburger Dev!" />
-
-    <link rel="stylesheet" href="./styles/output.css" />
     <meta property="og:image" content="https://cardapio-chi-virid.vercel.app/assets/hamb-1.png" />
     <meta property="og:description" content="O melhor Lanche da Região" />
-    <meta property="og:site_namw" content="Dev Burger" />
+    <meta property="og:site_name" content="Dev Burger" />
+
+    <link rel="stylesheet" href="./styles/output.css" />
 
     <title>Cardápio</title>
 
