ateração contato e hora

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 
     <link rel="stylesheet" href="./styles/output.css" />
 
+    <link rel="icon" href="./assets/logoh.png" type="image/x-icon">
+
     <title>Cardápio</title>
 
 
